--- a/css/style.css
+++ b/css/style.css
@@ -188,6 +188,16 @@ html {
     background-color: #d98248;
     color:#ffffff;
 }
+.btn-custom-8 {
+    background-color:#ffffff;
+    color:#000000;
+    border:0;
+}
+.btn-custom-8:hover, .btn-custom-8:active, .btn-custom-8:focus {
+    background-color: #ffffff;
+    color:#000000;
+    border:0;
+}
 .bg-color-1 {
     background-color:#f3f3f3!important;
 }
@@ -235,6 +245,12 @@ html {
 }
 .bg-color-16 {
     background-color:#ebaba3!important;
+}
+.bg-color-17 {
+    background-color:#f3a6ac!important;
+}
+.bg-color-18 {
+    background-color:#f4f1ec!important;
 }
 .letter-spacing-5 {
     letter-spacing:0.05em;
