--- a/css/style.css
+++ b/css/style.css
@@ -108,7 +108,7 @@ html {
     color:#147ca0;
 }
 .text-color-6 {
-    color:#000000;
+    color:#000000!important;
 }
 .text-color-7 {
     color:#616161;
