--- a/css/style.css
+++ b/css/style.css
@@ -282,11 +282,16 @@ html {
     background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23000' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E") !important;
 }
 
+.accordion-button:not(.collapsed) {
+    color: #212529;
+    background-color: #ffffff;
+}
+
 /*##################################################################*/
 
 #artist-image {
-    min-width:200px;
-    width:200px;
+    min-width:240px;
+    width:240px;
 }
 
 .carousel-control-prev {
@@ -297,6 +302,10 @@ html {
 }
 
 @media(min-width:576px) {
+    #artist-image {
+        min-width:280px;
+        width:280px;
+    }
     .carousel-control-prev {
         left:-35px!important;
     }
@@ -306,10 +315,6 @@ html {
 }
 
 @media(min-width:768px) {
-    #artist-image {
-        min-width:280px;
-        width:280px;
-    }
     .carousel-control-prev {
         left:-55px!important;
     }
@@ -319,6 +324,10 @@ html {
 }
 
 @media(min-width:992px) {
+    #artist-image {
+        min-width:320px;
+        width:320px;
+    }
     .carousel-control-prev {
         left:-70px!important;
     }
@@ -328,6 +337,10 @@ html {
 }
 
 @media(min-width:1200px) {
+    #artist-image {
+        min-width:360px;
+        width:360px;
+    }
     .carousel-control-prev {
         left:-85px!important;
     }
