--- a/css/style.css
+++ b/css/style.css
@@ -352,6 +352,19 @@ html {
 .nav-pills-custom-1 .nav-link {
     color: #147ca0;
 }
+.page-link {
+    color: #147ca0;
+    background-color:#ffffff;
+    border:1px solid #bbbbbb;
+}
+.page-item.active .page-link, .page-item.active .page-link:hover {
+    background-color:#147ca0;
+}
+.collection-dropdown-item.active, .collection-dropdown-item:focus {
+    color: #fff;
+    text-decoration: none;
+    background-color: #147ca0;
+}
 
 /*##################################################################*/
 
