--- a/css/style.css
+++ b/css/style.css
@@ -222,6 +222,21 @@ html {
     background-color: #000000;
     color:#ffffff;
 }
+.btn-custom-10 {
+    background-color:rgba(0,0,0,0);
+    color:#305e83;
+    border:3px solid #305e83;
+}
+.btn-custom-10:hover {
+    background-color: #ffffff;
+    border:3px solid #305e83;
+    color:#305e83;
+}
+.btn-custom-10:active, .btn-custom-10:focus, .btn-custom-10.active {
+    background-color: #305e83;
+    border:3px solid #305e83;
+    color:#ffffff;
+}
 .bg-color-1 {
     background-color:#f3f3f3!important;
 }
