Add UI and frontend script for property filtering

--- a/css/style.css
+++ b/css/style.css
@@ -467,6 +467,15 @@ html {
     background-color: #606060;
     border-radius: 4px;
 }
+#property-filter-items .form-check-input:checked {
+    background-color: #147ca0;
+    border-color: #147ca0;
+}
+.property-filter-selected-item {
+    border-radius:20px;
+    border:2px solid #147ca0;
+    color: #147ca0;
+}
 
 /*##################################################################*/
 
