--- a/css/style.css
+++ b/css/style.css
@@ -467,6 +467,7 @@ html {
 /* Targtes on Chrome, Edge, and Safari */
 *::-webkit-scrollbar {
     width: 8px;
+    height: 8px;
 }
 
 *::-webkit-scrollbar-track {
