--- a/css/style.css
+++ b/css/style.css
@@ -537,6 +537,48 @@ html {
 .page-min-height {
     min-height:calc(100vh - 81px);
 }
+
+#mq-banner {
+    margin-top: 83px;
+    background-image: url("../img/mq/banner.jpg");
+    background-position: top center;
+}
+
+.mq-banner-logo {
+    width: 70%;
+    margin: 0 auto 3%;
+}
+
+.mq-banner-button {
+    background-color: #ff9f42;
+    color: white;
+}
+
+.mq-banner-button:hover,
+.mq-banner-button:focus {
+    background-color: #ff8e31;
+    color: white;
+}
+
+.mq-banner-assets {
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+
+.mq-banner-portal {
+    width: 85%;
+    margin: 0 auto;
+}
+
+.mq-banner-mustachios {
+    position: absolute;
+    width: 85%;
+    margin: 0 auto;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
 /*##################################################################*/
 
 .artist-image {
