--- a/css/style.css
+++ b/css/style.css
@@ -334,6 +334,10 @@ html {
     background-color: #000000;
     color: #ffffff;
 }
+.btn-custom-17 {
+    background-color:#e1e3e3;
+    color:#000000;
+}
 .bg-color-1 {
     background-color:#f3f3f3!important;
 }
@@ -579,6 +583,11 @@ html {
     left: 50%;
     transform: translate(-50%, -50%);
 }
+.newsletter-form .form-check-input:checked {
+    background-color: #bc3326 !important;
+    border-color: #bc3326 !important;
+}
+
 /*##################################################################*/
 
 .artist-image {
